--- a/backend/package.json
+++ b/backend/package.json
@@ -3,11 +3,11 @@
   "version": "1.0.0",
   "description": "Backend for the application",
   "main": "index.js",
+  "type": "module",  
   "scripts": {
     "start": "node index.js"
   },
   "dependencies": {
-    "cors": "^2.8.5",
     "express": "^4.21.1"
   }
 }
