--- a/backend/package.json
+++ b/backend/package.json
@@ -1,13 +1,16 @@
 {
-  "name": "backend",
+  "name": "calendar-backend",
   "version": "1.0.0",
-  "description": "Backend for the application",
-  "main": "index.js",
-  "type": "module",  
+  "main": "server.js",
+  "type": "module",
   "scripts": {
-    "start": "node index.js"
+    "start": "node server.js",
+    "build": "cd ../frontend && npm install && npm run build"
   },
   "dependencies": {
-    "express": "^4.21.1"
+    "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
+    "express": "^4.18.2",
+    "pg": "^8.11.3"
   }
 }
