--- a/backend/package.json
+++ b/backend/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "scripts": {
     "start": "node server.js",
-    "build": "npm install && cd ../frontend && npm install && npm run build"
+    "postinstall": "cd ../frontend && npm install && npm run build"
   },
   "dependencies": {
     "cors": "^2.8.5",
