--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,7 +9,7 @@
     "vite": "^4.5.0"
   },
   "scripts": {
-    "dev": "for /f \"tokens=5\" %a in ('netstat -ano ^| findstr :5173') do taskkill /PID %a /F & vite --port 5173 --strictPort",
+    "dev": "vite",
     "build": "vite build",
     "preview": "vite preview"
   }
